--- a/TrinityCreator/Tools/ItemCreator/ItemPreview.xaml
+++ b/TrinityCreator/Tools/ItemCreator/ItemPreview.xaml
@@ -88,11 +88,10 @@
                 <TextBlock Name="ItemDurabilityLbl"
                            Visibility="{Binding Durability, Converter={StaticResource ValueVisibilityConverter}}"
                            Foreground="White" FontSize="14" HorizontalAlignment="Left">
-                    <TextBlock Text="(" Margin="0,0,-5,0" />
+                    <TextBlock Text="Durability " Margin="0,0,-5,0" />
                     <TextBlock Text="{Binding Durability}" />
-                    <TextBlock Text="/" Margin="-2,0,-2,0"/>
+                    <TextBlock Text=" / " Margin="-2,0,-2,0"/>
                     <TextBlock Text="{Binding Durability}" />
-                    <TextBlock Text=")" Margin="-5,0,0,0" />
                 </TextBlock>
                 <TextBlock Foreground="#ffd200" FontSize="14" TextWrapping="Wrap" Visibility="{Binding Quote, Converter={StaticResource ValueVisibilityConverter}}">
                     <TextBlock Text="''" Margin="0,0,-5,0"/>
@@ -106,13 +105,13 @@
                     <Label Content="Buy Price:" Foreground="White" Width="100" FontSize="14" />
                     <Label Content="{Binding ValueBuy.Gold}" Name="BuyGoldLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                     <Label Content="{Binding ValueBuy.Silver}" Name="BuySilverLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                     <Label Content="{Binding ValueBuy.Copper}" Name="BuyCopperLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                 </DockPanel>
 
                 <!-- Sell price -->
@@ -121,13 +120,13 @@
                     <Label Content="Sell Price:" Foreground="White" Width="100" FontSize="14" />
                     <Label Content="{Binding ValueSell.Gold}" Name="SellGoldLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/gold.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                     <Label Content="{Binding ValueSell.Silver}" Name="SellSilverLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/silver.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                     <Label Content="{Binding ValueSell.Copper}" Name="SellCopperLbl" Foreground="White"
                            HorizontalAlignment="Left" FontSize="14" />
-                    <Image Source="Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
+                    <Image Source="/TrinityCreator;component/Resources/copper.gif" Width="15" Height="15" HorizontalAlignment="Left" />
                 </DockPanel>
 
             </StackPanel>
