Scrapped in-app browser for model viewer.
Yeeting model viewer. It's not worth because CefSharp causing way too much trouble for such a minor feature.
Missing locales or some other extra that couldn't load was the reason for silent startup crashes.
- Cleaned setup file
- Cleaned publish script

--- a/TrinityCreatorSetup/Product.wxs
+++ b/TrinityCreatorSetup/Product.wxs
@@ -2,7 +2,7 @@
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
   <Product Id="*"
            Name="Trinity Creator"
-           Language="1033" Version="1.1.0.102"
+           Language="1033" Version="1.1.0.103"
            Manufacturer="NotCoffee418"
            UpgradeCode="7F3D3555-6622-43BB-A57B-3ADD4D2AFB0F">
 
@@ -29,62 +29,39 @@
       <Component Id="TrinityCreator.exe">
         <File Id="TrinityCreator.exe" Source="$(var.TrinityCreator.TargetDir)TrinityCreator.exe" KeyPath="yes" />
       </Component>
+
+      <Component Id="AutoUpdater.NET.dll">
+        <File Id="AutoUpdater.NET.dll" Source="$(var.TrinityCreator.TargetDir)AutoUpdater.NET.dll" KeyPath="yes" />
+      </Component>
+      <Component Id="BouncyCastle.Crypto.dll">
+        <File Id="BouncyCastle.Crypto.dll" Source="$(var.TrinityCreator.TargetDir)BouncyCastle.Crypto.dll" KeyPath="yes" />
+      </Component>
+      <Component Id="Google.Protobuf.dll">
+        <File Id="Google.Protobuf.dll" Source="$(var.TrinityCreator.TargetDir)Google.Protobuf.dll" KeyPath="yes" />
+      </Component>
       <Component Id="MySql.Data.dll">
         <File Id="MySql.Data.dll" Source="$(var.TrinityCreator.TargetDir)MySql.Data.dll" KeyPath="yes" />
       </Component>
-      <Component Id="CefSharp.BrowserSubprocess.exe">
-        <File Id="CefSharp.BrowserSubprocess.exe" Source="$(var.TrinityCreator.TargetDir)CefSharp.BrowserSubprocess.exe" KeyPath="yes" />
+      <Component Id="Newtonsoft.Json.dll">
+        <File Id="Newtonsoft.Json.dll" Source="$(var.TrinityCreator.TargetDir)Newtonsoft.Json.dll" KeyPath="yes" />
       </Component>
-      <Component Id="CefSharp.BrowserSubprocess.Core.dll">
-        <File Id="CefSharp.BrowserSubprocess.Core.dll" Source="$(var.TrinityCreator.TargetDir)CefSharp.BrowserSubprocess.Core.dll" KeyPath="yes" />
+      <Component Id="Renci.SshNet.dll">
+        <File Id="Renci.SshNet.dll" Source="$(var.TrinityCreator.TargetDir)Renci.SshNet.dll" KeyPath="yes" />
       </Component>
-      <Component Id="CefSharp.Core.dll">
-        <File Id="CefSharp.Core.dll" Source="$(var.TrinityCreator.TargetDir)CefSharp.Core.dll" KeyPath="yes" />
+      <Component Id="System.Buffers.dll">
+        <File Id="System.Buffers.dll" Source="$(var.TrinityCreator.TargetDir)System.Buffers.dll" KeyPath="yes" />
       </Component>
-      <Component Id="CefSharp.dll">
-        <File Id="CefSharp.dll" Source="$(var.TrinityCreator.TargetDir)CefSharp.dll" KeyPath="yes" />
+      <Component Id="System.Memory.dll">
+        <File Id="System.Memory.dll" Source="$(var.TrinityCreator.TargetDir)System.Memory.dll" KeyPath="yes" />
       </Component>
-      <Component Id="CefSharp.WinForms.dll">
-        <File Id="CefSharp.WinForms.dll" Source="$(var.TrinityCreator.TargetDir)CefSharp.WinForms.dll" KeyPath="yes" />
+      <Component Id="System.Numerics.Vectors.dll">
+        <File Id="System.Numerics.Vectors.dll" Source="$(var.TrinityCreator.TargetDir)System.Numerics.Vectors.dll" KeyPath="yes" />
       </Component>
-      <Component Id="d3dcompiler_47.dll">
-        <File Id="d3dcompiler_47.dll" Source="$(var.TrinityCreator.TargetDir)d3dcompiler_47.dll" KeyPath="yes" />
+      <Component Id="System.Runtime.CompilerServices.Unsafe.dll">
+        <File Id="System.Runtime.CompilerServices.Unsafe.dll" Source="$(var.TrinityCreator.TargetDir)System.Runtime.CompilerServices.Unsafe.dll" KeyPath="yes" />
       </Component>
-      <Component Id="libcef.dll">
-        <File Id="libcef.dll" Source="$(var.TrinityCreator.TargetDir)libcef.dll" KeyPath="yes" />
-      </Component>
-      <Component Id="libEGL.dll">
-        <File Id="libEGL.dll" Source="$(var.TrinityCreator.TargetDir)libEGL.dll" KeyPath="yes" />
-      </Component>
-      <Component Id="libGLESv2.dll">
-        <File Id="libGLESv2.dll" Source="$(var.TrinityCreator.TargetDir)libGLESv2.dll" KeyPath="yes" />
-      </Component>
-      <Component Id="chrome_elf.dll">
-        <File Id="chrome_elf.dll" Source="$(var.TrinityCreator.TargetDir)chrome_elf.dll" KeyPath="yes" />
-      </Component>
-      <Component Id="icudtl.dat">
-        <File Id="icudtl.dat" Source="$(var.TrinityCreator.TargetDir)icudtl.dat" KeyPath="yes" />
-      </Component>
-      <Component Id="cef.pak">
-        <File Id="cef.pak" Source="$(var.TrinityCreator.TargetDir)cef.pak" KeyPath="yes" />
-      </Component>
-      <Component Id="cef_100_percent.pak">
-        <File Id="cef_100_percent.pak" Source="$(var.TrinityCreator.TargetDir)cef_100_percent.pak" KeyPath="yes" />
-      </Component>
-      <Component Id="cef_200_percent.pak">
-        <File Id="cef_200_percent.pak" Source="$(var.TrinityCreator.TargetDir)cef_200_percent.pak" KeyPath="yes" />
-      </Component>
-      <Component Id="cef_extensions.pak">
-        <File Id="cef_extensions.pak" Source="$(var.TrinityCreator.TargetDir)cef_extensions.pak" KeyPath="yes" />
-      </Component>
-      <Component Id="natives_blob.bin">
-        <File Id="natives_blob.bin" Source="$(var.TrinityCreator.TargetDir)natives_blob.bin" KeyPath="yes" />
-      </Component>
-      <Component Id="snapshot_blob.bin">
-        <File Id="snapshot_blob.bin" Source="$(var.TrinityCreator.TargetDir)snapshot_blob.bin" KeyPath="yes" />
-      </Component>
-      <Component Id="v8_context_snapshot.bin">
-        <File Id="v8_context_snapshot.bin" Source="$(var.TrinityCreator.TargetDir)v8_context_snapshot.bin" KeyPath="yes" />
+      <Component Id="Ubiety.Dns.Core.dll">
+        <File Id="Ubiety.Dns.Core.dll" Source="$(var.TrinityCreator.TargetDir)Ubiety.Dns.Core.dll" KeyPath="yes" />
       </Component>
     </DirectoryRef>
 
@@ -105,25 +82,19 @@
 
     <Feature Id="MainApplication" Title="Main Application" Level="1">
       <ComponentRef Id="TrinityCreator.exe" />
+      <ComponentRef Id="AutoUpdater.NET.dll" />
+      <ComponentRef Id="BouncyCastle.Crypto.dll" />
+      <ComponentRef Id="Google.Protobuf.dll" />
       <ComponentRef Id="MySql.Data.dll" />
-      <ComponentRef Id="CefSharp.BrowserSubprocess.exe" />
-      <ComponentRef Id="CefSharp.BrowserSubprocess.Core.dll" />
-      <ComponentRef Id="CefSharp.Core.dll" />
-      <ComponentRef Id="CefSharp.dll" />
-      <ComponentRef Id="CefSharp.WinForms.dll" />
-      <ComponentRef Id="d3dcompiler_47.dll" />
-      <ComponentRef Id="libcef.dll" />
-      <ComponentRef Id="libEGL.dll" />
-      <ComponentRef Id="libGLESv2.dll" />
-      <ComponentRef Id="icudtl.dat" />
-      <ComponentRef Id="cef.pak" />
-      <ComponentRef Id="cef_100_percent.pak" />
-      <ComponentRef Id="cef_200_percent.pak" />
-      <ComponentRef Id="chrome_elf.dll" />
-      <ComponentRef Id="cef_extensions.pak" />
-      <ComponentRef Id="natives_blob.bin" />
-      <ComponentRef Id="snapshot_blob.bin" />
-      <ComponentRef Id="v8_context_snapshot.bin" />
+      <ComponentRef Id="Newtonsoft.Json.dll" />
+      <ComponentRef Id="Renci.SshNet.dll" />
+      <ComponentRef Id="System.Buffers.dll" />
+      <ComponentRef Id="System.Memory.dll" />
+      <ComponentRef Id="System.Numerics.Vectors.dll" />
+      <ComponentRef Id="System.Runtime.CompilerServices.Unsafe.dll" />
+      <ComponentRef Id="Ubiety.Dns.Core.dll" />
+      
+      
       <!-- Step 3: Tell WiX to install the shortcut -->
       <ComponentRef Id="ApplicationShortcut" />
     </Feature>
