--- a/TrinityCreator/Tools/ItemCreator/ItemPage.xaml
+++ b/TrinityCreator/Tools/ItemCreator/ItemPage.xaml
@@ -276,8 +276,8 @@
                         <TextBox Name="EntryIdTxt" Text="{Binding EntryId}" Height="25" Margin="85,3,9,0"
                                  VerticalAlignment="Top" />
                         <StackPanel Margin="0,35,0,0">
-                            <Button Content="Export to database" Click="exportDbBtn_Click" FontWeight="Bold" Margin="2" />
-                            <Button Content="Export to SQL file" Click="exportSqlBtn_Click" FontWeight="Bold" Margin="2" />
+                            <Button Name="exportDbBtn" Content="Export to database" Click="exportDbBtn_Click" FontWeight="Bold" Margin="2" />
+                            <Button Name="exportSqlBtn" Content="Export to SQL file" Click="exportSqlBtn_Click" FontWeight="Bold" Margin="2" />
                             <Button Content="Create new item" Click="newItemBtn_Click" Margin="2"/>
                         </StackPanel>
                     </Grid>
