Minor UI cleanup
- Clean some window titles
- Source Link in profile selection is now hidden unless defined and will open through Process.Start() if valid uri

--- a/TrinityCreator/Tools/ItemCreator/WeaponExportWindow.xaml
+++ b/TrinityCreator/Tools/ItemCreator/WeaponExportWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TrinityCreator.Tools.ItemCreator"
         mc:Ignorable="d"
-        Title="WeaponExportWindow" Height="500" Width="800" Loaded="Window_Loaded">
+        Title="Export Weapon" Height="500" Width="800" Loaded="Window_Loaded">
     <Grid>
         <RichTextBox x:Name="weaponNoticeRtb" Margin="0,0,0,50" VerticalScrollBarVisibility="Visible"/>
         <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right">
