--- a/TrinityCreator/UI/UIElements/Browser.xaml
+++ b/TrinityCreator/UI/UIElements/Browser.xaml
@@ -4,7 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TrinityCreator"
+             xmlns:WPF="clr-namespace:Microsoft.Toolkit.Wpf.UI.Controls;assembly=Microsoft.Toolkit.Wpf.UI.Controls.WebView"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Name="HostGrid" />
+    <WPF:WebView x:Name="webViewControl" Source="about:blank"
+        IsIndexedDBEnabled="True"
+        IsJavaScriptEnabled="True"
+        IsPrivateNetworkClientServerCapabilityEnabled="True"
+        IsScriptNotifyAllowed="True"/>
 </UserControl>
