#81 Multiple Issues with Item Creator
- Added Sheath & Material column profile support
- "Never show again" option on WeaponExportWindow
- Crash on create new item button fixed (null check)

--- a/TrinityCreator/Tools/ItemCreator/WeaponExportWindow.xaml
+++ b/TrinityCreator/Tools/ItemCreator/WeaponExportWindow.xaml
@@ -8,6 +8,9 @@
         Title="Export Weapon" Height="500" Width="800" Loaded="Window_Loaded">
     <Grid>
         <RichTextBox x:Name="weaponNoticeRtb" Margin="0,0,0,50" VerticalScrollBarVisibility="Visible"/>
+        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="20,0,0,17">
+            <CheckBox Name="neverShowAgainCb" Content="Never show this window again" />
+        </StackPanel>
         <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Right">
             <Button Content="Copy DBC CSV to clipboard (NIY)" IsEnabled="False" Margin="5" Width="200"/>
             <Button x:Name="justExportBtn" Content="Just Export" Margin="5" Width="100" Click="justExportBtn_Click"/>
