Error catching, logger entries, offline support, View log files menu
- DBC extractor error handling
- Connection.Open() will no longer assume connection was valid when retrying regardless of the connection's actual validity.
- Change some MessageBoxes to Logger
- Profile support for LookupTool: GetCreatureIdFromDisplayId & GetItemDisplayFromEntry
- Simplify LookupQuery profile calls (redundant "Profiles.")
- Show application version in credits window
- Added "View Log Files" button to Info menu
- Ensure application can run without active internet connection.

--- a/TrinityCreator/UI/MainWindow.xaml
+++ b/TrinityCreator/UI/MainWindow.xaml
@@ -21,6 +21,7 @@
             <MenuItem Header="Info" >
                 <MenuItem Header="Credits" Click="Credits_Click" />
                 <MenuItem Header="Report bug" Click="ReportBugs_Click" />
+                <MenuItem Header="View Log Files" Click="ViewLogsDir_Click" />
             </MenuItem>
         </Menu>
 
