--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -10,7 +10,7 @@
         <WrapPanel>
             <GroupBox Header="Info" Width="1000">
                 <StackPanel Orientation="Vertical">
-                    <TextBlock>WARNING: This tool is for advanced users. Read the documentation or <Hyperlink NavigateUri="https://www.youtube.com/watch?v=UNXz33NpTf0" RequestNavigate="Hyperlink_RequestNavigate">watch the video tutorial</Hyperlink> before using it.</TextBlock>
+                    <TextBlock>WARNING: This tool is for advanced users. <Hyperlink NavigateUri="https://github.com/NotCoffee418/TrinityCreator/wiki/Adding-Emulator-Support" RequestNavigate="Hyperlink_RequestNavigate">Read the documentation</Hyperlink> or <Hyperlink NavigateUri="https://www.youtube.com/watch?v=UNXz33NpTf0" RequestNavigate="Hyperlink_RequestNavigate">watch the video tutorial</Hyperlink> before using it.</TextBlock>
                     <StackPanel Orientation="Horizontal">
                         <Button Name="loadBtn" Content="Load profile from file" Margin="5" Height="25" Width="150" Click="loadBtn_Click"/>
                         <Button Name="copyBtn" Content="Copy Json to clipboard" Margin="5" Height="25" Width="150" Click="copyBtn_Click"/>
