--- a/TrinityCreator/Tools/QuestCreator/QuestPage.xaml
+++ b/TrinityCreator/Tools/QuestCreator/QuestPage.xaml
@@ -71,16 +71,20 @@
                     <StackPanel>
                         <DockPanel Margin="2">
                             <Label Content="Questgiver" DockPanel.Dock="Left" Width="120" />
-                            <Button Content="Find NPC" DockPanel.Dock="Right" Width="75" Click="findCreatureBtn_Click"/>
+                            <ComboBox Name="questStarterTypeCb"  Width="120" DockPanel.Dock="Right" Margin="5,0,0,0" ToolTip="Only applies to modern structure. Older emulators will use NpcOrGo." SelectionChanged="questStarterTypeCb_SelectionChanged"/>
                             <TextBox Text="{Binding Questgiver}" DockPanel.Dock="Left" />
                         </DockPanel>
  
                         <DockPanel Margin="2">
                             <Label Content="Completer" DockPanel.Dock="Left" Width="120" />
-                            <Button Name="findGoBtn" Content="Find Object" DockPanel.Dock="Right" Width="75" Click="findGoBtn_Click"/>
-                            <Button Name="findCreatureBtn" Content="Find NPC" DockPanel.Dock="Right" Width="75" Click="findCreatureBtn_Click"/>
+                            <ComboBox Name="questEnderTypeCb"  Width="120" DockPanel.Dock="Right" Margin="5,0,0,0" ToolTip="Only applies to modern structure. Older emulators will use NpcOrGo." SelectionChanged="questEnderTypeCb_SelectionChanged"/>
                             <TextBox Text="{Binding QuestCompleter}" DockPanel.Dock="Left" />
                         </DockPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Button Name="findGoBtn" Content="Find Object" DockPanel.Dock="Right" Width="75" Click="findGoBtn_Click" Margin="5" />
+                            <Button Name="findCreatureBtn" Content="Find NPC" DockPanel.Dock="Right" Width="75" Click="findCreatureBtn_Click" Margin="5" />
+                            <Button Content="Find Items" Click="findItemBtn_Click" Width="100" Margin="5" />
+                        </StackPanel>
                     </StackPanel>
                 </GroupBox>
                 <GroupBox Header="Prerequisites">
@@ -102,7 +106,7 @@
                 <GroupBox Header="On quest start">
                     <StackPanel>
                         <DockPanel Margin="2">
-                            <Label Content="Start Item" DockPanel.Dock="Left" Width="120" />
+                            <Label Content="Provided Item" DockPanel.Dock="Left" Width="120" />
                             <Button Content="Find" DockPanel.Dock="Right" Width="75" Click="findItemBtn_Click"/>
                             <TextBox Text="{Binding StartItem}" DockPanel.Dock="Left" />
                         </DockPanel>
