--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorDefinition.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorDefinition.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TrinityCreator.Tools.ProfileCreator.ProfileCreatorSetting"
+﻿<UserControl x:Class="TrinityCreator.Tools.ProfileCreator.ProfileCreatorDefinition"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <WrapPanel Orientation="Horizontal">
-        <TextBox Text="{Binding SettingKey}" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
-        <TextBox Text="{Binding SettingValue}" IsEnabled="{Binding IsIncluded}"  Width="170" Margin="5"/>
+        <TextBox Text="{Binding DefinitionKey}" IsReadOnly="True" Width="170" Margin="5" ToolTip="{Binding Tooltip}"/>
+        <TextBox Text="{Binding DefinitionValue}" IsEnabled="{Binding IsIncluded}"  Width="170" Margin="5"/>
         <CheckBox IsChecked="{Binding IsIncluded}" VerticalAlignment="Center" ToolTip="Uncheck to ignore this AppKey when generating an sql query."/>
     </WrapPanel>
 </UserControl>
