--- a/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
+++ b/TrinityCreator/Tools/ProfileCreator/ProfileCreatorWindow.xaml
@@ -71,8 +71,8 @@
                     <!-- ProfileCreatorEntries go here -->
                 </StackPanel>
             </GroupBox>
-            <GroupBox Header="Lookup Tool" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <StackPanel x:Name="lookupToolSp" Orientation="Vertical">
+            <GroupBox Header="Definitions" Width="500" Margin="5" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <StackPanel x:Name="definitionsSp" Orientation="Vertical">
                     <!-- ProfileCreatorEntries go here -->
                 </StackPanel>
             </GroupBox>
