--- a/TrinityCreator/UI/ProfileSelectionWindow.xaml
+++ b/TrinityCreator/UI/ProfileSelectionWindow.xaml
@@ -6,5 +6,7 @@
         xmlns:local="clr-namespace:TrinityCreator.Profiles"
         mc:Ignorable="d"
         Title="Choose a profile" Height="450" Width="800">
-    <StackPanel x:Name="profileControlsSp" Orientation="Vertical" />
+    <ScrollViewer>
+        <StackPanel x:Name="profileControlsSp" Orientation="Vertical" />
+    </ScrollViewer>
 </Window>
