--- a/TrinityCreator/Tools/VendorCreator/VendorPage.xaml
+++ b/TrinityCreator/Tools/VendorCreator/VendorPage.xaml
@@ -9,18 +9,13 @@
 	Title="VendorPage">
     <DockPanel>
         <StackPanel MinWidth="300" DockPanel.Dock="Right">
-            <DockPanel Margin="2">
+            <DockPanel Margin="5">
                 <TextBlock Text="Vendor NPC ID"  Width="100" DockPanel.Dock="Left" Margin="5"/>
                 <Button Content="Lookup" Width="80" Click="npcLookupBtn_Click" DockPanel.Dock="Right" Margin="2,0,0,0"/>
                 <TextBox Name="npcTb"/>
             </DockPanel>
 
-            <StackPanel Margin="0,20,0,20">
-                <Button Content="Add Item" Click="addItemBtn_Click" Margin="5" />
-                <Button Content="Remove Last Item" Click="removeItemBtn_Click" Margin="5" />
-            </StackPanel>
-
-            <StackPanel>
+            <StackPanel Margin="5">
                 <Button Margin="5" Content="Export to SQL file" Click="exportSqlBtn_Click" />
                 <Button Margin="5" Content="Export to Database" Click="exportDbBtn_Click" />
             </StackPanel>
@@ -28,9 +23,18 @@
 
 
         <ScrollViewer MinWidth="300">
-            <WrapPanel x:Name="vendorEntriesWp" FlowDirection="LeftToRight">
-                <!-- VendorEntryControls go here-->
-            </WrapPanel>
+            <StackPanel Orientation="Vertical">
+                <WrapPanel x:Name="vendorEntriesWp" FlowDirection="LeftToRight">
+                    <!-- VendorEntryControls go here-->
+                </WrapPanel>
+                <Button Margin="5" HorizontalAlignment="Center" Click="addItemBtn_Click">
+                    <StackPanel Orientation="Horizontal" Height="50">
+                        <Image Source="/TrinityCreator;component/Resources/Add-icon.png" Margin="10,0" Width="30px" Height="30px" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                        <TextBlock Text="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" FontSize="20"/>
+                    </StackPanel>
+                
+                </Button>
+            </StackPanel>
         </ScrollViewer>
     </DockPanel>
 </Page>
