--- a/TrinityCreator/Tools/LootCreator/LootPage.xaml
+++ b/TrinityCreator/Tools/LootCreator/LootPage.xaml
@@ -30,12 +30,12 @@
             <TextBox Name="entryTb"/>
         </DockPanel>
         <StackPanel Name="lootRowSp"/>
-        <DockPanel>
-            <Button x:Name="AddLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
-                    Content="Add" Click="addLineBtn_Click" />
-            <Button x:Name="RemoveLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
-                    Content="Remove" Click="removeLineBtn_Click" />
-        </DockPanel>
+        <Button Margin="5" HorizontalAlignment="Center" Click="addLineBtn_Click">
+            <StackPanel Orientation="Horizontal" Height="25">
+                <Image Source="/TrinityCreator;component/Resources/add-icon.png" Margin="10,0" Width="20px" Height="20px" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                <TextBlock Text="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" FontSize="16"/>
+            </StackPanel>
+        </Button>
         <StackPanel>
             <Button Margin="5,20,5,0"
                     Content="Export to SQL file" Click="exportSqlBtn_Click" />
