--- a/TrinityCreator/UI/UIElements/DynamicDataControl.xaml
+++ b/TrinityCreator/UI/UIElements/DynamicDataControl.xaml
@@ -10,10 +10,12 @@
         <DockPanel Name="HeaderDp" />
         <StackPanel x:Name="DynamicSp" />
         <DockPanel>
-            <Button x:Name="AddLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
-                    Content="Add" Click="addLineBtn_Click" />
-            <Button x:Name="RemoveLineBtn" Width="70" Height="30" HorizontalAlignment="Left" Margin="5,5,0,0"
-                    Content="Remove" Click="removeLineBtn_Click" />
+            <Button Name="AddLineBtn" Margin="5" HorizontalAlignment="Left" Click="addLineBtn_Click">
+                <StackPanel Orientation="Horizontal" Height="30">
+                    <Image Source="/TrinityCreator;component/Resources/add-icon.png" Margin="10,0" Width="24" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                    <TextBlock Text="Add" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,15,0" />
+                </StackPanel>
+            </Button>
         </DockPanel>
     </StackPanel>
 </UserControl>
